force-app/main/default/objects/Medicine__c/Medicine__c.object-meta.xml
<CustomObject>
    <label>Medicine</label>
    <nameField>
        <label>Medicine_Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medicines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>